Make OBS dock use background headless runtime
